--- a/algorithms/algorithms_test.ipynb
+++ b/algorithms/algorithms_test.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f7330689",
    "metadata": {},
    "outputs": [
@@ -50,25 +50,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-04-08 19:18:01,175 INFO sqlalchemy.engine.Engine SELECT DATABASE()\n",
-      "2025-04-08 19:18:01,179 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-04-08 19:18:01,232 INFO sqlalchemy.engine.Engine SELECT @@sql_mode\n",
-      "2025-04-08 19:18:01,234 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-04-08 19:18:01,262 INFO sqlalchemy.engine.Engine SELECT @@lower_case_table_names\n",
-      "2025-04-08 19:18:01,263 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-04-08 19:18:01,312 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2025-04-08 19:18:01,314 INFO sqlalchemy.engine.Engine DESCRIBE `michals2`.`Perfumes`\n",
-      "2025-04-08 19:18:01,315 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-04-08 19:18:01,348 INFO sqlalchemy.engine.Engine SHOW FULL TABLES FROM `michals2`\n",
-      "2025-04-08 19:18:01,349 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-04-08 19:18:01,375 INFO sqlalchemy.engine.Engine SHOW FULL TABLES FROM `michals2`\n",
-      "2025-04-08 19:18:01,376 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-04-08 19:18:01,414 INFO sqlalchemy.engine.Engine SHOW CREATE TABLE `Perfumes`\n",
-      "2025-04-08 19:18:01,415 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-04-08 19:18:01,447 INFO sqlalchemy.engine.Engine SELECT `Perfumes`.id, `Perfumes`.`Name`, `Perfumes`.`Designer`, `Perfumes`.`URL`, `Perfumes`.`Gender`, `Perfumes`.`Accords`, `Perfumes`.`Description`, `Perfumes`.`ProsAndCons`, `Perfumes`.`TopNotes`, `Perfumes`.`MiddleNotes`, `Perfumes`.`BaseNotes`, `Perfumes`.`Longevity`, `Perfumes`.`Sillage` \n",
+      "2025-04-16 22:40:02,082 INFO sqlalchemy.engine.Engine SELECT DATABASE()\n",
+      "2025-04-16 22:40:02,083 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-04-16 22:40:02,202 INFO sqlalchemy.engine.Engine SELECT @@sql_mode\n",
+      "2025-04-16 22:40:02,203 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-04-16 22:40:02,265 INFO sqlalchemy.engine.Engine SELECT @@lower_case_table_names\n",
+      "2025-04-16 22:40:02,266 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-04-16 22:40:02,455 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2025-04-16 22:40:02,458 INFO sqlalchemy.engine.Engine DESCRIBE `michals2`.`Perfumes`\n",
+      "2025-04-16 22:40:02,459 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-04-16 22:40:02,514 INFO sqlalchemy.engine.Engine SHOW FULL TABLES FROM `michals2`\n",
+      "2025-04-16 22:40:02,515 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-04-16 22:40:02,577 INFO sqlalchemy.engine.Engine SHOW FULL TABLES FROM `michals2`\n",
+      "2025-04-16 22:40:02,578 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-04-16 22:40:02,651 INFO sqlalchemy.engine.Engine SHOW CREATE TABLE `Perfumes`\n",
+      "2025-04-16 22:40:02,652 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-04-16 22:40:02,727 INFO sqlalchemy.engine.Engine SELECT `Perfumes`.id, `Perfumes`.`Name`, `Perfumes`.`Designer`, `Perfumes`.`URL`, `Perfumes`.`Gender`, `Perfumes`.`Accords`, `Perfumes`.`Description`, `Perfumes`.`ProsAndCons`, `Perfumes`.`TopNotes`, `Perfumes`.`MiddleNotes`, `Perfumes`.`BaseNotes`, `Perfumes`.`Longevity`, `Perfumes`.`Sillage` \n",
       "FROM `Perfumes`\n",
-      "2025-04-08 19:18:01,448 INFO sqlalchemy.engine.Engine [generated in 0.00096s] {}\n",
-      "2025-04-08 19:18:02,078 INFO sqlalchemy.engine.Engine COMMIT\n"
+      "2025-04-16 22:40:02,727 INFO sqlalchemy.engine.Engine [generated in 0.00083s] {}\n",
+      "2025-04-16 22:40:03,867 INFO sqlalchemy.engine.Engine COMMIT\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "31d7bf36",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "2b9aa48b",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "78e1665c",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "6002719c",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "3c31d6c9",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "0                                                    []    0.071374  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,11 +308,177 @@
     "print(\"Top perfume recommendations:\")\n",
     "recommended_perfumes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "21921d49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "text_features = df['text_features'].tolist()\n",
+    "\n",
+    "embeddings = model.encode(text_features, convert_to_tensor=True)\n",
+    "user_embedding = model.encode(user_prompt, convert_to_tensor=True)\n",
+    "\n",
+    "cos_scores = util.cos_sim(user_embedding, embeddings).cpu().numpy().flatten()\n",
+    "top_indices = cos_scores.argsort()[::-1][:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1fe26595",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Designer</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Accords</th>\n",
+       "      <th>TopNotes</th>\n",
+       "      <th>MiddleNotes</th>\n",
+       "      <th>BaseNotes</th>\n",
+       "      <th>similarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td></td>\n",
+       "      <td>By Kilian</td>\n",
+       "      <td></td>\n",
+       "      <td>woody (100%); powdery (70.7588%); fruity (62.3...</td>\n",
+       "      <td>['Bergamot', 'Lemon']</td>\n",
+       "      <td>['Fig Nectar', 'Green Notes', 'Hedione']</td>\n",
+       "      <td>['Vanilla', 'Sandalwood', 'Cedar', 'Orris', 'A...</td>\n",
+       "      <td>0.015269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>950</th>\n",
+       "      <td></td>\n",
+       "      <td>Mancera</td>\n",
+       "      <td></td>\n",
+       "      <td>coffee (100%); woody (92.2342%); warm spicy (7...</td>\n",
+       "      <td>['Black Currant', 'Bergamot', 'Peach']</td>\n",
+       "      <td>['Coffee', 'Amber', 'Floral Notes']</td>\n",
+       "      <td>['Woody Notes', 'Sweet Notes', 'White Musk']</td>\n",
+       "      <td>0.032694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>766</th>\n",
+       "      <td>More Than Words</td>\n",
+       "      <td>Xerjoff</td>\n",
+       "      <td></td>\n",
+       "      <td>amber (100%); oud (68.8718%); fruity (64.8205%...</td>\n",
+       "      <td>['Agarwood (Oud)', 'Fruity Notes', 'Floral Not...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0.040287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>450</th>\n",
+       "      <td>Dangerous Lily</td>\n",
+       "      <td>Dzintars</td>\n",
+       "      <td></td>\n",
+       "      <td>white floral (100%); floral (76.6668%); woody ...</td>\n",
+       "      <td>['Lily', 'Floral Notes', 'dark woodsy notes', ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0.026576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>977</th>\n",
+       "      <td></td>\n",
+       "      <td>By Kilian</td>\n",
+       "      <td></td>\n",
+       "      <td>sweet (100%); woody (75.308%); fruity (67.0148...</td>\n",
+       "      <td>['Cognac', 'Raspberry', 'Liquor']</td>\n",
+       "      <td>['Tonka Bean', 'Bulgarian Rose', 'Oakmoss']</td>\n",
+       "      <td>['Praline', 'Oak', 'Sandalwood']</td>\n",
+       "      <td>0.007445</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Name   Designer Description  \\\n",
+       "998                   By Kilian               \n",
+       "950                     Mancera               \n",
+       "766  More Than Words    Xerjoff               \n",
+       "450   Dangerous Lily   Dzintars               \n",
+       "977                   By Kilian               \n",
+       "\n",
+       "                                               Accords  \\\n",
+       "998  woody (100%); powdery (70.7588%); fruity (62.3...   \n",
+       "950  coffee (100%); woody (92.2342%); warm spicy (7...   \n",
+       "766  amber (100%); oud (68.8718%); fruity (64.8205%...   \n",
+       "450  white floral (100%); floral (76.6668%); woody ...   \n",
+       "977  sweet (100%); woody (75.308%); fruity (67.0148...   \n",
+       "\n",
+       "                                              TopNotes  \\\n",
+       "998                              ['Bergamot', 'Lemon']   \n",
+       "950             ['Black Currant', 'Bergamot', 'Peach']   \n",
+       "766  ['Agarwood (Oud)', 'Fruity Notes', 'Floral Not...   \n",
+       "450  ['Lily', 'Floral Notes', 'dark woodsy notes', ...   \n",
+       "977                  ['Cognac', 'Raspberry', 'Liquor']   \n",
+       "\n",
+       "                                     MiddleNotes  \\\n",
+       "998     ['Fig Nectar', 'Green Notes', 'Hedione']   \n",
+       "950          ['Coffee', 'Amber', 'Floral Notes']   \n",
+       "766                                           []   \n",
+       "450                                           []   \n",
+       "977  ['Tonka Bean', 'Bulgarian Rose', 'Oakmoss']   \n",
+       "\n",
+       "                                             BaseNotes  similarity  \n",
+       "998  ['Vanilla', 'Sandalwood', 'Cedar', 'Orris', 'A...    0.015269  \n",
+       "950       ['Woody Notes', 'Sweet Notes', 'White Musk']    0.032694  \n",
+       "766                                                 []    0.040287  \n",
+       "450                                                 []    0.026576  \n",
+       "977                   ['Praline', 'Oak', 'Sandalwood']    0.007445  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommended_perfumes = df.iloc[top_indices][['Name', 'Designer', 'Description', 'Accords', 'TopNotes', 'MiddleNotes', 'BaseNotes']]\n",
+    "recommended_perfumes['similarity'] = cos_similarities[top_indices]\n",
+    "\n",
+    "# Display\n",
+    "recommended_perfumes"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
