database data hidden

--- a/algorithms/algorithms_test.ipynb
+++ b/algorithms/algorithms_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "66e06758",
    "metadata": {},
    "outputs": [],
@@ -12,23 +12,27 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from rapidfuzz import process, fuzz\n",
+    "from dotenv import load_dotenv\n",
     "\n",
+    "import os\n",
     "import pandas as pd\n",
     "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "ff06586f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "username = 'michals2'\n",
-    "password = 'Nv1VZRmuTxRvJn3u'\n",
-    "host = 'mysql.agh.edu.pl'\n",
-    "port = 3306\n",
-    "database = 'michals2'\n",
+    "load_dotenv()\n",
+    "\n",
+    "username = os.getenv(\"DB_USER\")\n",
+    "password = os.getenv(\"DB_PASSWORD\")\n",
+    "host =  os.getenv(\"DB_HOST\")\n",
+    "port = os.getenv(\"DB_PORT\")\n",
+    "database =  os.getenv(\"DB_DATABASE\")\n",
     "\n",
     "connection_string = f'mysql+pymysql://{username}:{password}@{host}:{port}/{database}'"
    ]
