--- a/algorithms/quiz_data_gathering.ipynb
+++ b/algorithms/quiz_data_gathering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "14a8ca8d",
    "metadata": {},
    "outputs": [],
@@ -12,22 +12,27 @@
     "import re\n",
     "from collections import Counter\n",
     "from nltk.corpus import stopwords\n",
-    "import nltk"
+    "import nltk\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e513249e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Database connection details\n",
-    "username = 'michals2'\n",
-    "password = 'Nv1VZRmuTxRvJn3u'\n",
-    "host = 'mysql.agh.edu.pl'\n",
-    "port = 3306\n",
-    "database = 'michals2'\n",
+    "load_dotenv()\n",
+    "\n",
+    "username = os.getenv(\"DB_USER\")\n",
+    "password = os.getenv(\"DB_PASSWORD\")\n",
+    "host =  os.getenv(\"DB_HOST\")\n",
+    "port = os.getenv(\"DB_PORT\")\n",
+    "database =  os.getenv(\"DB_DATABASE\")\n",
     "\n",
     "connection_string = f'mysql+pymysql://{username}:{password}@{host}:{port}/{database}'\n",
     "engine = create_engine(connection_string)"
@@ -495,7 +500,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -509,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
